# RPi-flashcards-gemini-live

./: README.md  main.py  pyproject.toml
