[project]
name = "flashcards"
version = "0.1.0"
description = "AI-powered flashcard quizzing with realtime audio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.64.0",
    "gpiozero>=2.0.1",
    "lgpio>=0.2.2.0",
    "pillow>=12.1.1",
    "pyaudio>=0.2.14",
]
